# ChangeLog for media-libs/smpeg
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/smpeg/ChangeLog,v 1.16 2004/06/25 03:07:10 agriffis Exp $

  23 Jun 2004; Mike Frysinger <vapier@gentoo.org>
  -files/smpeg-0.4.4-gcc-3.1.patch, -smpeg-0.4.4-r2.ebuild,
  smpeg-0.4.4-r4.ebuild:
  Clean up ebuild to remove issues with autotools #54423 by Ludootje.

  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> smpeg-0.4.4-r2.ebuild,
  smpeg-0.4.4-r4.ebuild:
  Fix use invocation

  14 Mar 2004; Stephen P. Becker <geoman@gentoo.org> smpeg-0.4.4-r4.ebuild:
  Added ~mips keyword.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*smpeg-0.4.4-r4 (22 Aug 2002)

  15 Dec 2002; Bjoern Brauel <bjb@gentoo.org> smpeg-0.4.4-r4.ebuild :
  Add alpha to KEYWORDS
 
  28 Sep 2002; Nick Hadaway <raker@gentoo.org> smpeg-0.4.4-r4.ebuild :
  Changed to econf and einstall.  Exported CXX and CC to g++ to solve
  gcc3 linking problems with other programs.

  22 Aug 2002; Matthew Kennedy <mkennedy@gentoo.org>
  smpeg-0.4.4-r4.ebuild, files/digest-smpeg-0.4.4-r4, ChangeLog :
  Fixed linker error bug. Resolves bug 4666.

*smpeg-0.4.4-r3 (03 Aug 2002)
 
  03 Aug 2002; Doug Goldstein <cardoe@gentoo.org> smpeg-0.4.4-r3.ebuild :
  Fixed gcc-3.1 support. (No ppc KEYWORD yet)
  Bug #5558 Olivier Crete <tester@videotron.ca> posted the patch from Redhat.
  This patch doesn't work for gcc-2.95 systems so we're not applying it for non-gcc-3.x

*smpeg-0.4.4-r2 (3 Feb 2002)

  02 Aug 2002; mark Guertin <gerk@gentoo.org> smpeg-0.4.4-r2.ebuild :
  Added ppc to keywords

  5 Apr 2002; M.Schlemmer <azarah@gentoo.org> smpeg-0.4.4-r2.ebuild :
  gcc-3 fixes by PreZ.

  3 Feb 2002; M.Schlemmer <azarah@gentoo.org> smpeg-0.4.4-r2.ebuild :
  '--enable-mmx' causes test apps to crash on startup.  Disable this for now.
  Resolves bug #470.  Some form fixes.

*smpeg-0.4.4-r1 (1 Feb 2002)
