@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/smpeg/Attic/smpeg-0.4.4-r4.ebuild,v 1.15 2004/06/25 03:07:10 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/smpeg/Attic/smpeg-0.4.4-r4.ebuild,v 1.16 2004/07/16 21:36:20 mr_bones_ Exp $
 
 inherit eutils gcc
 
@@ -25,26 +25,29 @@ src_unpack() {
 		-e 's:-mcpu=ev4 -Wa,-mall::' \
 		-e 's:-march=486::' \
 		-e 's:-march=pentium -mcpu=pentiumpro::' \
-		configure || die "sed failed"
+		configure \
+		|| die "sed configure failed"
 	# GCC 3.1 fix from bug #5558 (cardoe 08/03/02)
-	sed -i '/^libsmpeg_la_LIBADD =/s:$: -lsupc++:' Makefile.in
+	sed -i \
+		-e '/^libsmpeg_la_LIBADD =/s:$: -lsupc++:' Makefile.in \
+		|| die "sed Makefile.in failed"
 }
 
 src_compile() {
 	# --enable-mmx causes test apps to crash on startup #470
-	#	`use_enable mmx` \
+	#	$(use_enable mmx) \
 	econf \
-		`use_enable debug` \
-		`use_enable debug assertions` \
-		`use_enable gtk gtk-player` \
-		`use_with X x` \
-		`use_enable opengl opengl-player` \
-		${myconf} || die "configure failed"
+		$(use_enable debug) \
+		$(use_enable debug assertions) \
+		$(use_enable gtk gtk-player) \
+		$(use_with X x) \
+		$(use_enable opengl opengl-player) \
+		|| die "econf failed"
 
-	emake || die "parallel make failed"
+	emake || die "emake failed"
 }
 
 src_install() {
-	make install DESTDIR=${D} || die "make install failed"
+	make DESTDIR="${D}" install || die "make install failed"
 	dodoc CHANGES README* TODO
 }
