@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/smpeg
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/smpeg/ChangeLog,v 1.16 2004/06/25 03:07:10 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/smpeg/ChangeLog,v 1.17 2004/07/16 21:36:20 mr_bones_ Exp $
+
+  16 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> smpeg-0.4.4-r4.ebuild:
+  error check sed; report emake not parallel make; tidy
 
   23 Jun 2004; Mike Frysinger <vapier@gentoo.org>
   -files/smpeg-0.4.4-gcc-3.1.patch, -smpeg-0.4.4-r2.ebuild,
